# curse

./: .gitignore  Cargo.toml  LICENSE  README.md  error.txt
src/: assets.rs  audio.rs  logger.rs  main.rs  state.rs  utils.rs  vannah.rs
src/notifications/: notifications.rs
src/views/: _template.rs  common.rs  jobs.rs  menu.rs  mod.rs  notifications.rs  resize.rs
src/views/interface/: interface.rs  jobs.rs  malwarehunter.rs  mod.rs  wordfinder.rs
src/views/intro/: intro.rs  mod.rs
