[package]
name = "curse"
version = "0.1.0"
authors = ["NecroTechno <necrotechno@riseup.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.7"
include_dir = "0.5"
rodio = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.cursive]
# version = "0.15.0-alpha.0"
version = "0.14"
default-features = false
# git = "https://github.com/gyscos/cursive"
# branch = "master"
features = ["crossterm-backend"]
